--- a/index.html
+++ b/index.html
@@ -55,56 +55,17 @@ body{
 
 .notice-bar{
   position:sticky;
-  top:10px;
+  top:0;
   z-index:1600;
-  max-width:1100px;
-  margin:10px auto 0;
-  padding:10px 12px;
-  text-align:center;
-
-  position:relative;
-  border-radius:16px;
-  background:rgba(18,18,18,.55);
-  border:1px solid rgba(255,255,255,.10);
-  color:rgba(255,255,255,.92);
+  background:linear-gradient(135deg,var(--gold),var(--gold2));
+  color:#000;
   font-weight:900;
   font-size:13px;
-  letter-spacing:-.2px;
+  padding:10px 12px;
+  text-align:center;
   box-shadow:0 10px 30px rgba(0,0,0,.35);
-  backdrop-filter: blur(14px);
-  -webkit-backdrop-filter: blur(14px);
-  transition: background .18s ease, box-shadow .18s ease, border-color .18s ease, opacity .18s ease;
-  overflow:hidden;
 }
-.notice-bar::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  border-radius:inherit;
-  pointer-events:none;
-  background: radial-gradient(420px 120px at 30% 0%, rgba(212,175,55,.18), transparent 62%);
-  opacity:.9;
-}
-.notice-bar a{
-  position:relative;
-  color:inherit;
-  text-decoration:none;
-  display:block;
-}
-.notice-bar.is-scrolled{
-  background:rgba(18,18,18,.28);
-  border-color:rgba(255,255,255,.07);
-  box-shadow:0 6px 18px rgba(0,0,0,.25);
-}
-@media (max-width:640px){
-  .notice-bar{
-    top:0;
-    margin:0;
-    border-radius:0;
-    border-left:none;
-    border-right:none;
-  }
-}
+.notice-bar a{ color:#000; text-decoration:none; }
 
 #loader{
   position:fixed;
@@ -509,7 +470,88 @@ select.insight-select{
 
 .content{ padding:10px 10px 12px; }
 .site{ font-size:15px; font-weight:900; }
-.desc{ margin-top:6px; font-size:12px; color:#bdbdbd; line-height:1.35; min-height:32px; }
+.desc{
+  margin-top:6px;
+  font-size:12px;
+  color:#bdbdbd;
+  line-height:1.35;
+  min-height:32px;
+  display:-webkit-box;
+  -webkit-line-clamp:2;
+  -webkit-box-orient:vertical;
+  overflow:hidden;
+}
+
+.perk{
+  margin-top:8px;
+  display:inline-flex;
+  align-items:center;
+  gap:6px;
+  padding:6px 10px;
+  border-radius:999px;
+  background:rgba(212,175,55,.12);
+  border:1px solid rgba(212,175,55,.20);
+  color:#f2d56b;
+  font-size:11px;
+  font-weight:900;
+  max-width:100%;
+}
+.perk-text{
+  white-space:nowrap;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  max-width:100%;
+}
+
+.quick-cta{
+  position:absolute;
+  left:10px;
+  right:10px;
+  bottom:10px;
+  z-index:2;
+  display:flex;
+  gap:8px;
+  opacity:0;
+  transform: translateY(8px);
+  transition: opacity .16s ease, transform .16s ease;
+}
+.card:hover .quick-cta,
+.card:focus-within .quick-cta{
+  opacity:1;
+  transform: translateY(0);
+}
+.qbtn{
+  flex:1;
+  border-radius:999px;
+  padding:10px 10px;
+  font-weight:900;
+  font-size:12px;
+  background:rgba(0,0,0,.55);
+  border:1px solid rgba(255,255,255,.14);
+  color:#fff;
+  backdrop-filter: blur(8px);
+  cursor:pointer;
+  transition: filter .14s ease, transform .14s ease, border-color .14s ease;
+}
+.qbtn:hover{ filter:brightness(1.06); border-color:rgba(255,255,255,.22); }
+.qbtn:active{ transform: translateY(1px); }
+.qbtn.primary{
+  background:linear-gradient(135deg,var(--gold),var(--gold2));
+  border-color:rgba(0,0,0,.18);
+  color:#111;
+}
+@media (hover:none){
+  .quick-cta{ opacity:1; transform:none; }
+  .qbtn{ padding:9px 10px; font-size:11px; }
+}
+
+.img-box img{
+  transition: transform .18s ease;
+}
+.card:hover .img-box img{
+  transform: scale(1.04);
+}
+
 .code{ margin-top:8px; font-size:12px; color:var(--gold2); font-weight:900; }
 
 
@@ -1363,10 +1405,7 @@ function hideLoader() {
   setTimeout(()=>{ if(l && l.remove) l.remove(); }, 450);
 }
 window.addEventListener("load", hideLoader);
-// 로딩 이벤트가 지연/차단되더라도 화면이 막히지 않도록 보조 트리거
-document.addEventListener("DOMContentLoaded", ()=>{ setTimeout(hideLoader, 1800); });
 setTimeout(hideLoader, 2500);
-document.addEventListener('visibilitychange', ()=>{ if(!document.hidden) setTimeout(hideLoader, 600); });
 
 /* ===== 날짜 키(로컬) ===== */
 function dateKeyLocal() {
@@ -1411,25 +1450,6 @@ function rotateNotice() {
 }
 rotateNotice();
 setInterval(rotateNotice, 4000);
-
-/* ===== 공지 배너: 스크롤 시 미니/투명 처리 ===== */
-(function(){
-  const bar = document.querySelector('.notice-bar');
-  if(!bar) return;
-  let ticking = false;
-  function update(){
-    const y = window.scrollY || document.documentElement.scrollTop || 0;
-    if(y > 60) bar.classList.add('is-scrolled');
-    else bar.classList.remove('is-scrolled');
-  }
-  function onScroll(){
-    if(ticking) return;
-    ticking = true;
-    requestAnimationFrame(()=>{ update(); ticking = false; });
-  }
-  window.addEventListener('scroll', onScroll, { passive:true });
-  update();
-})();
 
 /* ===== 인사이트 ===== */
 function pickInsight(sport) {
@@ -1925,7 +1945,14 @@ function renderGrid() {
     const d = CARD_DATA[id];
     const src = cardSourcesById(id);
 const rawDesc = d.benefit ? d.benefit : "";
-    const desc = isCleanText ? cleanBenefit(rawDesc) : rawDesc;
+    // 혜택 문구에서 "첫 문장/첫 혜택"을 뽑아 하이라이트(검색/정렬 로직에는 영향 없음)
+    const perk0 = (rawDesc || "").split("/")[0].split("·")[0].split("|")[0].trim();
+    const perk = perk0 ? (isCleanText ? cleanBenefit(perk0) : perk0) : "";
+    let restRaw = rawDesc;
+    if(perk0) restRaw = rawDesc.replace(perk0, "");
+    restRaw = (restRaw || "").replace(/^[\s\/·\-\|]+/, "").trim();
+    const desc = restRaw ? (isCleanText ? cleanBenefit(restRaw) : restRaw)
+                         : (isCleanText ? cleanBenefit(rawDesc) : rawDesc);
 
     return `
       <div class="card" data-card="${id}">
@@ -1934,15 +1961,17 @@ const rawDesc = d.benefit ? d.benefit : "";
             <source type="image/webp" srcset="${src.webp}">
             <img src="${src.jpg}" loading="lazy" decoding="async" alt="${(d.title||"").replace(/"/g,'&quot;')}">
           </picture>
+
+          <div class="quick-cta" aria-label="빠른 동작">
+            <button class="qbtn primary" type="button" data-open="${id}" aria-label="${(d.title||"").replace(/"/g,'&quot;')} 자세히 보기">자세히</button>
+            <button class="qbtn" type="button" data-share="${id}" aria-label="${(d.title||"").replace(/"/g,'&quot;')} 공유하기">공유</button>
+          </div>
         </div>
+
         <div class="content">
           <div class="site">${d.title || ""}</div>
+          ${perk ? ('<div class="perk"><span aria-hidden="true">🎁</span><span class="perk-text">' + perk + '</span></div>') : ''}
           <div class="desc">${desc}</div>
-          <div class="card-actions">
-            <div class="mini-share" role="button" tabindex="0" data-share="${id}" aria-label="공유하기">
-              <span aria-hidden="true">↗</span><span>공유</span>
-            </div>
-          </div>
         </div>
       </div>
     `;
@@ -1997,6 +2026,20 @@ function setSort(key) {
 function bindCardClicks() {
   document.querySelectorAll(".card[data-card]").forEach(el=>{
     el.onclick = ()=> openCard(el.dataset.card);
+  });
+
+  // '자세히' 버튼은 카드 전체 클릭과 동일 동작을 명확히 보여줍니다.
+  document.querySelectorAll("[data-open]").forEach(btn=>{
+    const open = (e)=>{
+      e.preventDefault();
+      e.stopPropagation();
+      const id = btn.getAttribute("data-open");
+      if(id) openCard(id);
+    };
+    btn.addEventListener("click", open);
+    btn.addEventListener("keydown", (e)=>{
+      if(e.key==="Enter" || e.key===" "){ open(e); }
+    });
   });
 
   // 공유 버튼(카드 내부) 클릭은 팝업 오픈 대신 공유 팝업을 엽니다.
